# Model-Optimizer

./: .coderabbit.yaml  .gitignore  .gitmodules  .markdownlint-cli2.yaml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG-Windows.rst  CHANGELOG.rst  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  DESIGN.md  FIXES.md  INTERN_SPEC.md  LICENSE  PR_URL.txt  README.md  VERIFICATION_COMMENT.txt  _opt_Megatron-Bridge_src_megatron_bridge_models_conversion_model_bridge.py  dflash_checkpoint_structure.md  distill.sbatch  genindex.html  index.html  noxfile.py  objects.inv  prune_gemma4_e4b.py  py-modindex.html  pyproject.toml  qualitative_specbench_results.json  search.html  searchindex.js  setup.py  slurm.py  test_method_comparison.py  test_per_page_scale.py  throughput_32k_specbench_results.json  tox.ini
.agents/: README.md  TOOLING.md  developer-guidelines.md
.github/: CODEOWNERS  codecov.yml
.gitlab/: .gitlab-ci.yml
agents/: README.md
deployment/: 1_tensorrt_llm.html  2_onnxruntime.html  3_unified_hf.html
eagle_training_data/: PretrainData.ipynb  design.md
examples/: 0_all_examples.html
examples/diffusers/quantization/inference/ltx-core/: pyproject.toml
examples/diffusers/quantization/inference/ltx-core/src/ltx_core/: utils.py
examples/diffusers/quantization/inference/ltx-core/src/ltx_core/loader/: fuse_loras.py  module_ops.py  primitives.py  registry.py  sd_keys_ops.py  sft_loader.py  single_gpu_model_builder.py
examples/diffusers/quantization/inference/ltx-core/src/ltx_core/model/audio_vae/: attention.py  audio_vae.py  downsample.py  model_configurator.py  ops.py  resnet.py  upsample.py  vocoder.py
examples/diffusers/quantization/inference/ltx-core/src/ltx_core/model/clip/gemma/: feature_extractor.py  tokenizer.py
examples/diffusers/quantization/inference/ltx-core/src/ltx_core/model/clip/gemma/encoders/: av_encoder.py  base_encoder.py  video_only_encoder.py
examples/diffusers/quantization/inference/ltx-core/src/ltx_core/model/transformer/: attention.py  modality.py  model.py  model_configurator.py  rope.py  transformer.py  transformer_args.py
examples/diffusers/quantization/inference/ltx-core/src/ltx_core/model/upsampler/: model_configurator.py
examples/diffusers/quantization/inference/ltx-core/src/ltx_core/model/video_vae/: model_configurator.py  normalization.py  resnet.py  video_vae.py
examples/diffusers/quantization/inference/ltx-core/src/ltx_core/pipeline/: conditioning.py
examples/diffusers/quantization/inference/ltx-core/src/ltx_core/pipeline/components/: diffusion_steps.py  guiders.py  patchifiers.py  protocols.py  schedulers.py
examples/diffusers/quantization/inference/ltx-core/tests/ltx_core/: utils.py
examples/diffusers/quantization/inference/ltx-core/tests/ltx_core/loader/: test_sgpu_sft_builder.py
examples/diffusers/quantization/inference/ltx-core/tests/ltx_core/model/audio_vae/: test_audio_vae.py  test_vocoder.py
examples/diffusers/quantization/inference/ltx-core/tests/ltx_core/model/transformer/: test_attention.py  test_model.py
examples/diffusers/quantization/inference/ltx-core/tests/ltx_core/model/video_vae/: test_video_vae.py
examples/diffusers/quantization/inference/ltx-core/tests/ltx_core/pipeline/: test_conditioning.py
examples/diffusers/quantization/inference/ltx-core/tests/ltx_core/pipeline/components/: test_diffusion_steps.py  test_guiders.py  test_schedulers.py
examples/diffusers/train/: README.md  pyproject.toml  slurm_example.sh  train_general.py
examples/diffusers/train/distill/: dataset.py  feature_extractor.py  interfaces.py  preprocess.py  run.py  utils.py
examples/diffusers/train/distill/models/: __init__.py  _deps.py
examples/diffusers/train/distill/models/ltx2/: __init__.py  loader.py  pipeline.py
examples/diffusers/train/distill/models/wan/: adapter.py  pipeline.py
getting_started/: 1_overview.html  2_installation.html  _installation_for_Linux.html
guides/: 0_support_matrix.html  10_recipes.html  11_config_system.html  1_quantization.html  2_save_load.html  3_pruning.html  4_distillation.html  5_speculative_decoding.html  6_sparsity.html  7_nas.html  8_autocast.html  9_autotune.html  _basic_quantization.html  _choosing_quant_methods.html  _compress_quantized_models.html  _customized_model_quantization.html  _onnx_quantization.html  _pytorch_quantization.html  _quant_cfg.html
launcher/: ADVANCED.md  CLAUDE.md  README.md  core.py  launch.py  pyproject.toml  slurm_config.py
launcher/Qwen/Qwen3-8B/: hf_offline_eagle3.yaml  megatron_lm_ptq.yaml
launcher/common/megatron-lm/quantize/: quantize.sh
launcher/tests/: conftest.py
modelopt/: __init__.py
modelopt_recipes/: ptq.md
reference/: 0_changelog.html  1_modelopt_api.html
scratch/: SESSION_HANDOFF.md  _cross_dataset_amax_compare.py  capture_calib_and_test_split.py  capture_qwen35_mlp_activations.py  mxfp4_to_nvfp4_mse.py  mxfp4_to_nvfp4_report.md  nvfp4_activation_calib_mse.py  nvfp4_activation_calib_report.md  nvfp4_activation_calib_results.json  nvfp4_real_activation_calib_mse.py  (+3 more)
tools/mcp/: README.md  pyproject.toml
tools/mcp/modelopt_mcp/: __init__.py  bridge.py  server.py
tools/mcp/tests/: test_bridge.py
(+5552 files in other folders)
