[project]
name = "modelopt-mcp"
version = "0.1.0"
description = "MCP server exposing ModelOpt launcher operations (submit, status, logs) as typed tools for codex / Claude Code agents"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0",
    # The launcher provides the core orchestration primitive (core.run_jobs,
    # SandboxPipeline, build_slurm_executor, build_docker_executor). Pulled
    # in via git+subdirectory so `uvx --from <this-repo>#subdirectory=tools/mcp
    # modelopt-mcp` resolves both packages from the same clone — no
    # duplicate fetch.
    "modelopt-launcher",
    "pyyaml",
    "pydantic>=2.0",
]

[project.scripts]
# Console entry. Codex / Claude Code launch this as a stdio subprocess.
# See OMNIML-5123 for the design + acceptance criteria.
modelopt-mcp = "modelopt_mcp.server:main"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["modelopt_mcp*"]

# The launcher sibling lives next door at ../launcher. We can't `pip install
# ../launcher` as a path-dep in a published pyproject without breaking the
# uvx-from-git workflow. For development, run:
#   uv pip install -e ../launcher
#   uv pip install -e .
# For users installing via uvx-from-git, the launcher comes in transitively
# via the modelopt-launcher dep (resolved from the SAME git repo's
# tools/launcher/ subdirectory — pip handles the fetch).
[tool.uv.sources]
modelopt-launcher = { path = "../launcher", editable = true }

[tool.pytest.ini_options]
testpaths = ["tests"]
