[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "diffusers-train"
version = "0.1.0"
description = "Unified distillation trainer for video generation models"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.4.0",
    "accelerate>=1.1.1",
    "omegaconf",
    "pydantic>=2.0",
    "wandb",
]

[project.optional-dependencies]
# Install ONE model backend -- do NOT mix, transitive deps may conflict.
#   pip install -e ".[wan]"
#   pip install -e ".[ltx2]"
wan = [
    "wan @ git+https://github.com/Wan-Video/Wan2.2.git",
]
ltx2 = [
    "ltx-core @ git+https://github.com/Lightricks/LTX-2.git#subdirectory=packages/ltx-core",
    "ltx-pipelines @ git+https://github.com/Lightricks/LTX-2.git#subdirectory=packages/ltx-pipelines",
    "ltx-trainer @ git+https://github.com/Lightricks/LTX-2.git#subdirectory=packages/ltx-trainer",
]

[tool.setuptools.packages.find]
include = ["distill*"]
